2004-04-02  Rob Savoye  <rob@direwolf.welcomehome.org>

	* configure.ac, example/Makefile.am: Add example/mathhelper.
	* configure, alocal.m4, example/Makefile.in: Regenerated.

2004-04-02 Joel Sherrill <joel@OARcorp.com>

	* example/mathhelper: New example for using the unit testing API.

2004-03-05  Daniel Jacobowitz  <drow@mvista.com>
                                                                                
        * lib/remote.exp (standard_spawn): Fix rsh username support.

2004-03-06  Rob Savoye  <rob@althea.welcomehome.org>

	* doc/C: New directory for DocBook XML files.
	* doc/C/dejagnu.omf: New config file for scrollkeeper.
	* doc/C/topic.dat: New config file for the GNOME help system.
	* doc/C/dejagnu.xml: DocBook XML formatted verion of what was
	overview.sgml.
	* doc/C/ref.xml: DocBook XML formatted verion of what was
	ref.sgml.
	* doc/C/user.xml: DocBook XML formatted verion of what was
	user.sgml.
	
2004-02-17  Ben Elliston  <bje@wasabisystems.com>

	* runtest.exp: Do not trap SIGSEGV.

2004-02-16  Ben Elliston  <bje@wasabisystems.com>

	* configure.ac: Update AC_INIT and AM_INIT_AUTOMAKE invocations.
	* configure: Regenerate.

2004-02-09  Ben Elliston  <bje@wasabisystems.com>

	* doc/runtest.1: Improve some wording. Update last revision date.

2004-02-09  Ben Elliston  <bje@wasabisystems.com>

	* NEWS: Document yesterday's work.

	* runtest: Improve comments.

2004-02-09  Ben Elliston  <bje@wasabisystems.com>

	* TODO: Update.

	* testsuite/libdejagnu/unit.cc: Conform with GNU coding standard.

2004-02-08  Ben Elliston  <bje@wasabisystems.com>

	* configure.ac: Quote strings throughout in good Autoconf style.
	Remove AC_PROG_YACC invocation. Search for docbook2dvi, et al and
	expect using AC_PATH_PROG. Remove DJ_AC_PATH_DOCBOOK in favour of
	existing macros. Remove stale BOARDS and CONFIG substs. Ensure Tcl
	is at version 8.3 or greater.
	* configure: Regenerate.
	* acinclude.m4: Remove.
	* aclocal.m4: Regenerate.
	* Makefile.in: Likewise.